# Drone-Cinematography

./: README.md
controller/controller/n1ctrl/: CMakeLists.txt  package.xml
controller/controller/n1ctrl/config/: ctrl_param_uav1.yaml
controller/controller/n1ctrl/docs/: fsm_graph.py
controller/controller/n1ctrl/launch/: ctrl.launch  dji_test.launch  djisim.launch  djisim_odom.launch  djisim_test.launch  go.launch  go31.launch  mission.launch  mission_eight.launch
controller/controller/n1ctrl/script/: n1_sim_helper.py
controller/controller/n1ctrl/src/: N1CtrlFSM.h  N1CtrlFSM_control.cpp  N1CtrlFSM_state.cpp  N1CtrlParam.cpp  N1CtrlParam.h  controller.cpp  controller.h  hovthrkf.cpp  hovthrkf.h  input.cpp  input.h  n1ctrl_node.cpp
djiros-3.3/djiros-3.3/: CMakeLists.txt  README.md  package.xml
djiros-3.3/djiros-3.3/include/dji_sdk/: dji_sdk_node.h
djiros-3.3/djiros-3.3/include/djiros/: DjiRos.h
djiros-3.3/djiros-3.3/launch/: djiros.launch
djiros-3.3/djiros-3.3/src/demo/: mobile_comm.cpp
djiros-3.3/djiros-3.3/src/djiros/: DjiRos.cpp  DjiRosAuthority.cpp  DjiRosPublisher.cpp  djiros_node.cpp
djiros-3.3/djiros-3.3/src/modules/: dji_sdk_node.cpp  dji_sdk_node_publisher.cpp
machine_defined/machine_defined/config/: ctrl_param_uav1.yaml  old_ctrl_param_uav1.yaml  rqt.perspective
machine_defined/machine_defined/launch/: ctrl_md.launch  estimation_flow_md.launch  estimation_md.launch  estimation_opti_md.launch  gs_md.launch  sensor_md.launch
read_x3/: CMakeLists.txt  package.xml
read_x3/include/: djicam.h
read_x3/launch/: manifold_cam.launch
read_x3/src/: _nv_cam.cpp.swp  control_cam.cpp  nv_cam.cpp  publish_img.cpp
